--- a/src/main/webapp/resources/css/register.css
+++ b/src/main/webapp/resources/css/register.css
@@ -15,7 +15,7 @@ body{
 
 }
 .menu img{
-    width: 4.5%;
+    width: 4%;
     height:86%;
     margin-left: 48%;
     margin-top: 0.4%;
@@ -29,18 +29,45 @@ body{
 }
 #register{
     width:50%;
-    line-height: 5%;
-    font-family:微软雅黑
+    font-family:微软雅黑;
+    margin-left:32%;
+    margin-top: 3%;
+
 }
-#register input{
-    height: 5%;
-    width: 94%;
+.text1{
+    height: 7%;
+    width: 74%;
     margin-left: 3%;
-    margin-top: 2px;
+    margin-top: 3%;
     border-radius: 8px;
     font-size: 20px;
     font-family: 微软雅黑;
     text-align: left;
     border-color: black;
     border-width: 1px;
+    padding-left: 2%;
+}
+.button{
+    margin-right: 20%;
+    margin-top: 3%;
+    float: right;
+    height:10%;
+    width: 80%;
+    border-radius: 24px;
+    background-color: #66ccff;
+    border-color: #66ccff;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    -webkit-appearance:none;
+}
+#button1{
+    margin-left: 5%;
+    margin-top: 3%;
+    font-size: 20px;
+    font-family: 微软雅黑;
+    text-align: left;
 }
