--- a/src/main/webapp/resources/css/SChicken.css
+++ b/src/main/webapp/resources/css/SChicken.css
@@ -7,27 +7,35 @@ body{
     height: 8%;
     width: 100%;
     border-bottom: 2px solid #6699ff;
+    position: absolute;
+    top:0;
 }
 #wrap{
-    background-image: url(../img/univers1.jpg);
+
     width: 100%;
     height: 92%;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    position: absolute;
+    top:10%;
+    left: 0%;
 }
+
 #main{
     width: 80%;
     height: 80%;
     margin: 0px auto;
+
 }
 ul
 {
     list-style-type: none;
     padding: 0px;
-    margin-left: 12.5%;
+    padding-left: 12.5%;
     margin-top: 0%;
     height: 100%;
+    background-color: white;
 
 }
 ul li
@@ -45,11 +53,11 @@ ul li
 }
 .img{
     width: 2.3%;
-    height:4.5%;
+    height:53%;
     margin-top: 0.6%;
     position:absolute;
     left: 16%;
-    top: 0.6%;
+    top: 9%;
 
 }
 ul li a{
@@ -63,6 +71,8 @@ ul li a:hover{
     height: 223px;
     width: 30%;
     background-color: white;
+    position: absolute;
+    top: 10%;
 }
 #right2{
     margin-top: 5%;
@@ -70,12 +80,14 @@ ul li a:hover{
     width:30%;
     background-color: white;
     margin-left: 60%;
+    position: absolute;
+    top: 44%;
 
 }
 #huanying{
     font-family: 微软雅黑;
     font-size: 40px;
-    position: relative;
+    position: absolute;
     top: 20%;
     margin-left: 10%;
     color: white;
@@ -106,7 +118,8 @@ input.b{
     border-width: 1px;
 }
 input.c{
-    margin-left: 10%;
+    position: relative;
+    left: 10%;
     font-family: 微软雅黑;
 }
 input.button1{
@@ -170,4 +183,9 @@ input.button2{
     display: inline-block;
     font-size: 16px;
     -webkit-appearance:none;
+}
+.f{
+    position: relative;
+    left: 10%;
+    font-family: 微软雅黑;
 }
