--- a/src/main/webapp/resources/css/SChicken.css
+++ b/src/main/webapp/resources/css/SChicken.css
@@ -52,8 +52,8 @@ ul li
 
 }
 .img{
-    width: 2.3%;
-    height:53%;
+    width: 30px;
+    height:30px;
     margin-top: 0.6%;
     position:absolute;
     left: 16%;
@@ -73,6 +73,8 @@ ul li a:hover{
     background-color: white;
     position: absolute;
     top: 10%;
+    right: 12%;
+
 }
 #right2{
     margin-top: 5%;
@@ -82,6 +84,7 @@ ul li a:hover{
     margin-left: 60%;
     position: absolute;
     top: 44%;
+    right: 12%;
 
 }
 #huanying{
@@ -89,7 +92,7 @@ ul li a:hover{
     font-size: 40px;
     position: absolute;
     top: 20%;
-    margin-left: 10%;
+    margin-left: 7%;
     color: white;
 
 }
