--- a/src/main/webapp/resources/css/personpage.css
+++ b/src/main/webapp/resources/css/personpage.css
@@ -2,11 +2,15 @@ body{
     width: 100%;
     height: 100%;
     margin: 0 auto;
+    background-color: #f2f2f2;
+
+
 }
 .menu{
     height: 8%;
     width: 100%;
     border-bottom: 2px solid #6699ff;
+    background-color: white;
 }
 .menu ul
 {
@@ -17,6 +21,7 @@ body{
     margin-top: 0%;
     height: 100%;
     float: left;
+    background-color: white;
 
 }
 .menu ul li
@@ -32,10 +37,10 @@ body{
     background:white;
 
 }
-ul li a{
+.menu ul li a{
     display:table-cell;text-align: center;vertical-align: middle;text-decoration: none;color: #000;
 }
-ul li a:hover {
+.menu ul li a:hover {
     color: dodgerblue;
 }
 .menu img{
@@ -74,63 +79,176 @@ input.b{
     font-size: 12px;
     -webkit-appearance:none;
 }
-.wrap{
-    background-color: #f2f2f2;
+
+.left{
+    width: 25%;
+    height: 100%;
+    float: left;
+
 
 }
-.main {
-    margin:0 auto;
-    width: 60%;
-    border-color: #66ccff;
+
+.right{
+    width: 75%;
+    height: 100%;
+    float: right;
+
+}
+.blueline{
+    width: 100%;
+    height: 20%;
+    background-color: #3399ff;
+}
+.whiteline{
+    width: 100%;
+    height: 9%;
+    border-bottom: 1px solid #000000;
     background-color: white;
+}
+.whiteline ul{
+
+    list-style-type: none;
+    width: 60%;
+    padding: 0px;
+    padding-left: 5%;
+    margin-top: 0%;
+    height: 100%;
+    float: left;
+    margin-left: 30%;
+}
+
+.whiteline ul li {
+    background-repeat: no-repeat;
+    float: left;
+    width: 25%;
+    height: 100%;
+    font-family: 微软雅黑;
+    font-size: 18px;
+    cursor:pointer;
+    display: table;
+
+
 
 }
+.whiteline ul li a{
+    display:table-cell;text-align: center;text-decoration: none;color: #666666;
+    position: relative;
+    top: 18%;
+}
+.whiteline ul li a:hover {
+    color: dodgerblue;
+    border-color: #3399ff;
+
+}
+.number1{
+    position: absolute;
+    top: 33%;
+    left: 42%;
+    color: #666666;
+
+}
+.number2{
+    position: absolute;
+    top: 33%;
+    left: 55%;
+    color: #666666;
+}
+.circle{
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    position: absolute;
+    top:20%;
+    left:10%;
+    background-color: white;
+}
+.circle img{
+    position: absolute;
+    width: 170px;
+    height: 170px;
+    top:10%;
+    left:8%;
+
+}
+.whole{
+    height: 100%;
+    background-color: #f2f2f2;
+}
+.username{
+    position: absolute;
+    top: 55%;
+    left: 15%;
+    font-family: 微软雅黑;
+    font-size: 22px;
+    color: #666666;
+}
+.realname{
+    position: absolute;
+    top: 49%;
+    left: 16%;
+    font-family: 微软雅黑;
+    font-size: 30px;
+}
+
 .detail1{
-    border:1px solid #666666;
+
     font-family: "微软雅黑";
     font-size: 16px;
+    background-color: white;
+    width: 85%;
+    height: 100%;
+    margin-top: 5%;
+    margin-left: 5%;
 }
 .img{
-    text-align: center;
+    margin-left: 5%;
     margin-top: 3%;
+
+}
+.img img{
+    max-height:530px;
+    max-width: 530px;
 }
 .img1{
-    width: 62px;
-    height: 62px;
+    width: 70px;
+    height: 70px;
     float: left;
     margin-left: 4%;
     margin-top: 2.5%;
     position: absolute;
-    left: 18%;
+    left: 27%;
 }
 .img1 img{
-    width: 60px;
-    height: 60px;
+    width: 68px;
+    height: 68px;
     float: left;
 }
 .text1{
     font-family: "微软雅黑";
     line-height: 2px;
-    margin-left: 13%;
+    margin-left: 15%;
     margin-top: 7%;
+    position: relative;
+    top: 8%;
+
 }
 .name1{
-    font-size: 18px;
+    font-size: 22px;
 }
 .name2{
-    font-size: 14px;
+    font-size: 18px;
     color: #666666;
 }
 .p1{
     margin-right: 3%;
     margin-left: 4%;
-    margin-top: 3%;
-    font-size: 22px;
+    margin-top: 12%;
+    font-size: 24px;
 }
 
 .modal-content{
     width:800px;
-    height: 100%;
+    height: 1000px;
     position: absolute;
     right: 18%;
 }
