--- a/src/main/webapp/resources/css/personpage.css
+++ b/src/main/webapp/resources/css/personpage.css
@@ -82,7 +82,6 @@ input.b{
 
 .left{
     width: 25%;
-    height: 100%;
     float: left;
 
 
@@ -90,7 +89,6 @@ input.b{
 
 .right{
     width: 75%;
-    height: 100%;
     float: right;
 
 }
@@ -171,7 +169,6 @@ input.b{
 
 }
 .whole{
-    height: 100%;
     background-color: #f2f2f2;
 }
 .username{
@@ -196,7 +193,6 @@ input.b{
     font-size: 16px;
     background-color: white;
     width: 85%;
-    height: 100%;
     margin-top: 5%;
     margin-left: 5%;
 }
@@ -225,11 +221,10 @@ input.b{
 }
 .text1{
     font-family: "微软雅黑";
-    line-height: 2px;
+    line-height: 10px;
     margin-left: 15%;
     margin-top: 7%;
-    position: relative;
-    top: 8%;
+    padding-top: 7%;
 
 }
 .name1{
@@ -242,7 +237,7 @@ input.b{
 .p1{
     margin-right: 3%;
     margin-left: 4%;
-    margin-top: 12%;
+    margin-top: 6%;
     font-size: 24px;
 }
 
