--- a/src/main/webapp/resources/css/mainpage.css
+++ b/src/main/webapp/resources/css/mainpage.css
@@ -7,6 +7,7 @@ body{
     height: 8%;
     width: 100%;
     border-bottom: 2px solid #6699ff;
+    background-color: white;
 }
 .menu ul
 {
@@ -78,31 +79,161 @@ input.b{
     background-color: #f2f2f2;
 
 }
-#left{
+.left{
     width: 40%;
-    height: 100%;
     float: left;
     background-color: #6699ff;
 }
-#left1{
+.left1{
     width: 80%;
-    margin-left: 20%;
+    margin-left: 10%;
     margin-top: 10%;
-    font-size: 26px;
+}
+.blueline{
+    width: 100%;
+    height: 15%;
+    background-color: #3399ff;
+}
+.whiteline{
+    width: 100%;
+    height: 14%;
+    background-color:white ;
     font-family: 微软雅黑;
+    line-height: 26px;
+}
+.whiteline1{
+    width: 100%;
+    height: 11%;
+    background-color:white ;
+}
+.whiteline1 ul{
+
+    list-style-type: none;
+    width: 100%;
+    padding: 0px;
+    padding-left: 5%;
+    margin-top: 0%;
+    height: 100%;
+    float: left;
+}
+
+.whiteline1 ul li {
+    background-repeat: no-repeat;
+    float: left;
+    width: 33%;
+    height: 100%;
+    font-family: 微软雅黑;
+    font-size: 18px;
+    cursor:pointer;
+    display: table;
+
+
 
 }
-#left2{
-    width: 90%;
-    margin-left: 20%;
-    margin-top: 10%;
-    font-size: 22px;
-    font-family: 微软雅黑;
-    line-height: 60%;
+.whiteline1 ul li a{
+    display:table-cell;text-align: center;text-decoration: none;color: #666666;vertical-align: top;
 }
-#right{
+.whiteline1 ul li a:hover {
+    color: dodgerblue;
+    border-color: #3399ff;
+
+}
+.number1{
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    color: #666666;
+
+}
+.number2{
+    position: absolute;
+    top: 50%;
+    left: 20%;
+    color: #666666;
+}
+.number3{
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    color: #666666;
+
+}
+
+.circle{
+    width: 150px;
+    height: 150px;
+    border-radius: 75px;
+    border: 5px solid #3399ff;
+    position: absolute;
+    top:20%;
+    left:6%;
+    background-color: white;
+}
+.circle img{
+    position: absolute;
+    width: 130px;
+    height: 130px;
+    top:9%;
+    left:5%;
+
+}
+.right{
     width: 60%;
-    height: 100%;
     float: right;
     background-color: #66ccff;
 }
+.name1{
+    margin-left: 55%;
+    font-size: 26px;
+    margin-top: 10%;
+}
+.name2{
+    margin-left: 55%;
+    font-size: 22px;
+    color: #666666;
+
+}
+.left2{
+    width: 80%;
+    background-color: white;
+    margin-left: 10%;
+    margin-top: 10%;
+}
+
+.button{
+    margin-right: 15%;
+    margin-top: 10%;
+    float: right;
+    height:8%;
+    width: 70%;
+    border-radius: 24px;
+    background-color: #3399ff;
+    border-color: #66ccff;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 22px;
+    -webkit-appearance:none;
+}
+
+.button1{
+    margin-right: 15%;
+    margin-top: 20%;
+    float: right;
+    height:8%;
+    width: 70%;
+    border-radius: 24px;
+    background-color: white;
+    border-color: black;
+    color: #3399ff;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
+    -webkit-appearance:none;
+}
+
+
