--- a/src/main/webapp/resources/css/mainpage.css
+++ b/src/main/webapp/resources/css/mainpage.css
@@ -82,7 +82,6 @@ input.b{
 .left{
     width: 40%;
     float: left;
-    background-color: #6699ff;
 }
 .left1{
     width: 80%;
@@ -173,14 +172,16 @@ input.b{
     position: absolute;
     width: 130px;
     height: 130px;
-    top:9%;
-    left:5%;
+    border-radius: 65px;
+    top:6%;
+    left:4.8%;
 
 }
 .right{
-    width: 60%;
+    width: 55%;
     float: right;
-    background-color: #66ccff;
+    margin-right: 5%;
+    margin-top: 5%;
 }
 .name1{
     margin-left: 55%;
@@ -203,8 +204,9 @@ input.b{
 .button{
     margin-right: 15%;
     margin-top: 10%;
+    margin-bottom: 15%;
     float: right;
-    height:8%;
+    height:17%;
     width: 70%;
     border-radius: 24px;
     background-color: #3399ff;
@@ -220,13 +222,13 @@ input.b{
 
 .button1{
     margin-right: 15%;
-    margin-top: 20%;
+    margin-top: 4%;
     float: right;
-    height:8%;
+    height:50px;
     width: 70%;
     border-radius: 24px;
     background-color: white;
-    border-color: black;
+    border: 1px solid #666666;
     color: #3399ff;
     padding: 15px 32px;
     text-align: center;
@@ -235,5 +237,199 @@ input.b{
     font-size: 18px;
     -webkit-appearance:none;
 }
+.pay{
+    margin-left: 20%;
+}
+.payword{
+    margin-left:36%;
+    font-family: 微软雅黑;
+    font-size: 24px;
 
+}
+.test1{
+    margin-left: 19%;
+    font-size: 25px;
+}
+.left2{
+    height: 40%;
+}
+.right1{
+    width: 100%;
+    height: 8%;
+    background-color: #66ccff;
+    border-radius: 8px;
+    font-family: 微软雅黑;
+    font-size: 24px;
 
+}
+.right1 input{
+    width: 80%;
+    height: 80%;
+    border-radius: 8px;
+    float: right;
+    margin-top:0.6%;
+    margin-right:3%;
+    font-family: 微软雅黑;
+    text-align: left;
+    padding-left: 2%;
+}
+.detail1{
+
+    font-family: "微软雅黑";
+    font-size: 16px;
+    background-color: white;
+    width: 100%;
+
+}
+
+.img{
+    margin-left: 5%;
+    margin-top: 3%;
+
+}
+.img img{
+    max-height:530px;
+    max-width: 530px;
+}
+.img1{
+    width: 70px;
+    height: 70px;
+    float: left;
+    margin-left: 4%;
+    margin-top: 2.5%;
+    position: absolute;
+    left: 39%;
+    z-index:0;
+}
+.img1 img{
+    width: 68px;
+    height: 68px;
+    border-radius: 34px;
+    float: left;
+}
+.text1{
+    font-family: "微软雅黑";
+    line-height: 15px;
+    padding-top: 7%;
+    margin-right:64%;
+
+}
+.name1{
+    font-size: 22px;
+}
+.name2{
+    font-size: 18px;
+    color: #666666;
+}
+.p1{
+    margin-right: 3%;
+    margin-left: 4%;
+    margin-top: 6%;
+    font-size: 24px;
+    color: #666666;
+}
+#content{
+    position: absolute;
+    top: 12%;
+    width: 55%;
+    background-color: #66ccff;
+    border-radius: 8px;
+    z-index:1;
+}
+.rightwhite{
+    background-color: white;
+    text-align: center;
+    font-family: 微软雅黑;
+    font-size: 24px;
+    padding: 10px;
+    border-radius: 8px;
+
+}
+.rightwhite button{
+    float: right;
+    vertical-align: middle;
+    background-color: #3399ff;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
+.sc{
+    width: 80%;
+    margin-left: 10%;
+    height: 200px;
+    border-radius: 8px;
+    border-color: #3399ff;
+    margin-top: 15px;
+    font-family: 微软雅黑;
+    font-size: 24px;
+    text-align: left;
+    vertical-align: top;
+    margin-bottom: 2%;
+}
+
+.button3{
+    margin-right: 10%;
+    margin-bottom: 2%;
+    float: right;
+    height:6%;
+    width:15%;
+    border-radius: 24px;
+    background-color:#6699ff;
+    border-color: #3399ff;
+    color: white;
+    padding: 7px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    -webkit-appearance:none;
+}
+.file{
+    margin-left: 10%;
+    margin-bottom: 2%;
+    float: left;
+    height:30px;
+    width:30px;
+
+}
+#modal-content{
+    width:800px;
+    height: 1000px;
+    position: absolute;
+    right: 18%;
+}
+.img2{
+    width: 88px;
+    height: 88px;
+    float: left;
+    margin-left: 4%;
+    margin-top: 2.5%;
+    position: absolute;
+    left: 2%;
+    top: 1%;
+}
+.img2 img{
+    width: 86px;
+    height: 86px;
+    float: left;
+}
+.text2{
+    font-family: "微软雅黑";
+    line-height: 20px;
+    margin-left: 20%;
+    margin-top: 6%;
+}
+.name3{
+    font-size: 24px;
+    font-weight: bold;
+}
+.name4 {
+    font-size: 20px;
+    color: #666666;
+}
+.p2 {
+    margin-right: 3%;
+    margin-left: 5%;
+    margin-top: 5%;
+    font-size: 28px;
+}
