--- a/src/main/webapp/resources/css/personpage.css
+++ b/src/main/webapp/resources/css/personpage.css
@@ -164,6 +164,7 @@ input.b{
     position: absolute;
     width: 170px;
     height: 170px;
+    border-radius: 85px;
     top:10%;
     left:8%;
 
@@ -217,11 +218,12 @@ input.b{
 .img1 img{
     width: 68px;
     height: 68px;
+    border-radius: 34px;
     float: left;
 }
 .text1{
     font-family: "微软雅黑";
-    line-height: 10px;
+    line-height: 15px;
     margin-left: 15%;
     margin-top: 7%;
     padding-top: 7%;
