--- a/src/main/webapp/resources/css/register.css
+++ b/src/main/webapp/resources/css/register.css
@@ -11,12 +11,11 @@ body{
 }
 #wrap{
     width: 100%;
-    height: 92%;
 
 }
 .menu img{
-    width: 4%;
-    height:90%;
+    width: 50px;
+    height:50px;
     margin-left: 48%;
     margin-top: 0.3%;
 }
@@ -25,13 +24,13 @@ body{
     font-family:微软雅黑 ;
     font-size:40px;
     margin-left: 40%;
-    margin-top: 6%;
+    margin-top: 3%;
 }
 #register{
     width:50%;
     font-family:微软雅黑;
     margin-left:32%;
-    margin-top: 3%;
+    margin-top: 2%;
 
 }
 .text1{
@@ -49,7 +48,7 @@ body{
 }
 .button{
     margin-right: 20%;
-    margin-top: 3%;
+    margin-top: 2%;
     float: right;
     height:10%;
     width: 80%;
