--- a/src/main/webapp/resources/css/search.css
+++ b/src/main/webapp/resources/css/search.css
@@ -94,14 +94,20 @@ input.b{
     text-align: center;
     margin-top: 3%;
 }
+.img img{
+    max-height:530px;
+    max-width: 530px;
+}
 .img1{
     width: 62px;
     height: 62px;
     float: left;
     margin-left: 4%;
-    margin-top: 2.5%;
+    margin-top: 0%;
     position: absolute;
     left: 18%;
+    border-radius: 31px;
+
 }
 .img1 img{
     width: 60px;
@@ -113,6 +119,8 @@ input.b{
     line-height: 2px;
     margin-left: 13%;
     margin-top: 7%;
+    position: relative;
+    bottom: -20px;
 }
 .name1{
     font-size: 18px;
@@ -124,8 +132,9 @@ input.b{
 .p1{
     margin-right: 3%;
     margin-left: 4%;
-    margin-top: 3%;
+    margin-top: 6%;
     font-size: 22px;
+
 }
 
 .modal-content{
@@ -147,6 +156,7 @@ input.b{
 .img2 img{
     width: 86px;
     height: 86px;
+    border-radius: 43px;
     float: left;
 }
 .text2{
@@ -168,4 +178,39 @@ input.b{
     margin-left: 5%;
     margin-top: 5%;
     font-size: 28px;
+}
+.line{
+    height: 5%;
+    width: 100%;
+}
+.line ul {
+    list-style-type: none;
+    width: 70%;
+    padding: 0px;
+    padding-left: 15%;
+    margin-left: 10%;
+    margin-top: 0%;
+    height: 100%;
+    float: left;
+}
+.line ul li{
+    background-repeat: no-repeat;
+    float: left;
+    width: 30%;
+    height: 100%;
+    font-family: 微软雅黑;
+    font-size: 18px;
+    cursor:pointer;
+    display: table;
+    background:white;
+    text-align: center;
+    padding-top: 4%;
+}
+#content{
+    position: absolute;
+    top: 12%;
+    width: 55%;
+    background-color: #66ccff;
+    border-radius: 8px;
+    z-index:1;
 }
