--- a/src/main/webapp/resources/css/search.css
+++ b/src/main/webapp/resources/css/search.css
@@ -113,6 +113,7 @@ input.b{
     width: 60px;
     height: 60px;
     float: left;
+    border-radius: 30px;
 }
 .text1{
     font-family: "微软雅黑";
@@ -207,10 +208,55 @@ input.b{
     padding-top: 4%;
 }
 #content{
-    position: absolute;
+    position: relative;
     top: 12%;
-    width: 55%;
+    width: 100%;
     background-color: #66ccff;
     border-radius: 8px;
     z-index:1;
+}
+input.e{
+    height:4%;
+    width: 25%;
+    margin-left: 25%;
+    margin-top:1%;
+    border-radius: 8px;
+    font-size: 20px;
+    font-family: 微软雅黑;
+    text-align: left;
+    border-color: black;
+    border-width: 1px;
+    float: left;
+    margin-bottom: 1%;
+}
+input.f{
+    margin-left: 1%;
+    margin-top: 1%;
+    height:4%;
+    width: 5%;
+    border-radius: 24px;
+    background-color: white;
+    border-color:white;
+    color: #6699ff;
+    padding: 2px 4px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    -webkit-appearance:none;
+    margin-bottom: 1%;
+}
+.sousuo{
+    vertical-align: middle;
+    margin-left: 4%;
+    font-family: 微软雅黑;
+    float: left;
+    color: white;
+    font-size: 18px;
+    margin-top: 1%;
+
+
+}
+.shang{
+ background-color: #66ccff;
 }
