--- a/src/main/webapp/resources/css/personpage.css
+++ b/src/main/webapp/resources/css/personpage.css
@@ -82,6 +82,7 @@ input.b{
 
 .left{
     width: 25%;
+    height: 100%;
     float: left;
 
 
@@ -89,6 +90,7 @@ input.b{
 
 .right{
     width: 75%;
+    height: 100%;
     float: right;
 
 }
@@ -106,9 +108,9 @@ input.b{
 .whiteline ul{
 
     list-style-type: none;
-    width: 40%;
+    width: 60%;
     padding: 0px;
-    padding-left: 3%;
+    padding-left: 5%;
     margin-top: 0%;
     height: 100%;
     float: left;
@@ -118,7 +120,7 @@ input.b{
 .whiteline ul li {
     background-repeat: no-repeat;
     float: left;
-    width: 50%;
+    width: 25%;
     height: 100%;
     font-family: 微软雅黑;
     font-size: 18px;
@@ -148,7 +150,7 @@ input.b{
 .number2{
     position: absolute;
     top: 33%;
-    left: 60%;
+    left: 55%;
     color: #666666;
 }
 .circle{
@@ -164,12 +166,12 @@ input.b{
     position: absolute;
     width: 170px;
     height: 170px;
-    border-radius: 85px;
     top:10%;
     left:8%;
 
 }
 .whole{
+    height: 100%;
     background-color: #f2f2f2;
 }
 .username{
@@ -194,6 +196,7 @@ input.b{
     font-size: 16px;
     background-color: white;
     width: 85%;
+    height: 100%;
     margin-top: 5%;
     margin-left: 5%;
 }
@@ -218,15 +221,15 @@ input.b{
 .img1 img{
     width: 68px;
     height: 68px;
-    border-radius: 34px;
     float: left;
 }
 .text1{
     font-family: "微软雅黑";
-    line-height: 15px;
+    line-height: 2px;
     margin-left: 15%;
     margin-top: 7%;
-    padding-top: 7%;
+    position: relative;
+    top: 8%;
 
 }
 .name1{
@@ -239,7 +242,7 @@ input.b{
 .p1{
     margin-right: 3%;
     margin-left: 4%;
-    margin-top: 6%;
+    margin-top: 12%;
     font-size: 24px;
 }
 
@@ -283,105 +286,4 @@ input.b{
     margin-left: 5%;
     margin-top: 5%;
     font-size: 28px;
-}
-.button8{
-    float: right;
-    margin-right: 4%;
-    margin-top: 1.3%;
-    vertical-align: middle;
-    border-radius: 24px;
-    background-color: white;
-    border-color: #666666;
-    color: #666666;
-    padding: 7px 16px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    -webkit-appearance:none;
-}
-.button9{
-    float: right;
-    margin-right: 2%;
-    margin-top: 1.3%;
-    vertical-align: middle;
-    border-radius: 24px;
-    background-color: white;
-    border-color: #666666;
-    color: #666666;
-    padding: 7px 16px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    -webkit-appearance:none;
-}
-#content{
-    width: 20%;
-    float: left;
-
-    position: absolute;
-    left: 3%;
-    top: 60%;
-
-}
-.pp{
-    float: left;
-    font-size: 20px;
-    font-family: 微软雅黑;
-    color: #666666;
-
-}
-input.c{
-    height: 46px;
-    width: 94%;
-    margin-left: 3%;
-    margin-top: 20px;
-    border-radius: 8px;
-    padding-left:5px;
-    font-size: 20px;
-    border-color: #666666;
-    font-family: 微软雅黑;
-    text-align: left;
-    border-color: black;
-    border-width: 1px;
-
-}
-.ppp{
-    margin-left: 3%;
-    font-family: 微软雅黑;
-    font-size: 16px;
-    color: #3399ff;
-
-}
-.button10{
-    vertical-align: middle;
-    border-radius: 24px;
-    background-color: white;
-    border-color: #666666;
-    color: #66ccff;
-    padding: 7px 16px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    -webkit-appearance:none;
-    position: absolute;
-    top:-70% ;
-    right: -365%;
-}
-.button7{
-    float: left;
-    margin-left: 3%;
-    margin-top: 1.3%;
-    vertical-align: middle;
-    border-radius: 24px;
-    border-color: #666666;
-    color: #666666;
-    padding: 3px 8px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    -webkit-appearance:none;
 }
