--- a/src/main/webapp/resources/css/register.css
+++ b/src/main/webapp/resources/css/register.css
@@ -11,11 +11,12 @@ body{
 }
 #wrap{
     width: 100%;
+    height: 92%;
 
 }
 .menu img{
-    width: 50px;
-    height:50px;
+    width: 4%;
+    height:90%;
     margin-left: 48%;
     margin-top: 0.3%;
 }
@@ -24,13 +25,13 @@ body{
     font-family:微软雅黑 ;
     font-size:40px;
     margin-left: 40%;
-    margin-top: 3%;
+    margin-top: 6%;
 }
 #register{
     width:50%;
     font-family:微软雅黑;
     margin-left:32%;
-    margin-top: 2%;
+    margin-top: 3%;
 
 }
 .text1{
@@ -48,7 +49,7 @@ body{
 }
 .button{
     margin-right: 20%;
-    margin-top: 2%;
+    margin-top: 3%;
     float: right;
     height:10%;
     width: 80%;
